components/Dashboard/Overview/Reflection/Reflection.module.css
.reflection {
  height: 10rem;
  /* width: 90%; */
  /* margin: 2rem auto; */
  padding: 1.5rem;
  background: white;
  border-radius: 0.75rem;
  /* max-width: 40rem; */
}
.memo {
  height: 12rem;
  overflow-y: scroll;
  margin: 0.5rem;
}

.buttonWrapper {
  width: 10rem;
  margin: auto;
  color: black;
  text-align: center;
  /* background: pink; */
}

